k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: react-frontend-service
  template:
    metadata:
      labels:
        app: react-frontend-service
    spec:
      containers:
        - name: react-frontend-service
          image: rikhendrix/react-frontend-service:latest
          ports:
            - containerPort: 80
