k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-frontend-service
spec:
  selector:
    app: react-frontend-service
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
